--- a/catalog/full.yaml
+++ b/catalog/full.yaml
@@ -5,7 +5,7 @@ metadata:
   annotations:
     backstage.io/techdocs-ref: dir:.
 spec:
-  owner: team-alpha
+  owner: team-tanzu
   domain: production
   description: The system for managing todo items
 
@@ -20,7 +20,7 @@ metadata:
 spec:
   type: service
   lifecycle: production
-  owner: team-alpha
+  owner: team-tanzu
   system: todo-system
   description: The user interface for the todo system
   dependsOn:
@@ -37,7 +37,7 @@ metadata:
 spec:
   type: service
   lifecycle: production
-  owner: team-alpha
+  owner: team-tanzu
   system: todo-system
   description: The backend service for the todo system
   dependsOn:
@@ -54,6 +54,6 @@ metadata:
 spec:
   type: database
   lifecycle: production
-  owner: team-alpha
+  owner: team-tanzu
   system: todo-system
   description: Postgres database for the todo system
