--- a/catalog/full.yaml
+++ b/catalog/full.yaml
@@ -67,7 +67,7 @@ spec:
   lifecycle: experimental
   owner: team-tanzu
   system: todos
-  definition: url:https://raw.githubusercontent.com/odedia/todo-service/main/catalog/todo-api-demo.yaml
+  definitionAtLocation: url:https://raw.githubusercontent.com/odedia/todo-service/main/catalog/todo-api-demo.yaml
 
 ---
 
