--- a/catalog/full.yaml
+++ b/catalog/full.yaml
@@ -59,15 +59,16 @@ kind: API
 metadata:
   name: todo-api
   description: Backend API for the Todos application
-  annotations:
-    backstage.io/techdocs-ref: url:https://github.com/odedia/todo-service/blob/main/catalog/todo-api-demo.yaml
-    backstage.io/managed-by-location: github:https://github.com/odedia/todo-service/blob/main/catalog/todo-api-demo.yaml
+  links:
+    - url: http://todo-service-demos.apps.taptest.tanzutime.com
+      title: API Definition
+      icon: docs
 spec:
   type: openapi
   lifecycle: experimental
-  owner: team-tanzu
+  owner: default-team
   system: todos
-  definitionAtLocation: url:https://raw.githubusercontent.com/odedia/todo-service/main/catalog/todo-api-demo.yaml
+  definitionAtLocation: url:https://raw.githubusercontent.com/odedia/todo-service/main/catalog/todo-api.yaml
 
 ---
 
