--- a/catalog/full.yaml
+++ b/catalog/full.yaml
@@ -59,16 +59,14 @@ kind: API
 metadata:
   name: todo-api
   description: Backend API for the Todos application
-  links:
-    - url: http://todo-service-demos.apps.taptest.tanzutime.com
-      title: API Definition
-      icon: docs
+  annotations:
+    backstage.io/techdocs-ref: url:https://github.com/odedia/todo-service/blob/main/catalog/todo-api.yaml
+    backstage.io/managed-by-location: github:https://github.com/odedia/todo-service/blob/main/catalog/todo-api.yaml
 spec:
   type: openapi
   lifecycle: experimental
-  owner: default-team
+  owner: team-tanzu
   system: todos
-  definitionAtLocation: url:https://raw.githubusercontent.com/odedia/todo-service/main/catalog/todo-api.yaml
 
 ---
 
