--- a/catalog/full.yaml
+++ b/catalog/full.yaml
@@ -60,8 +60,8 @@ metadata:
   name: todo-api
   description: Backend API for the Todos application
   annotations:
-    backstage.io/techdocs-ref: url:https://github.com/odedia/todo-service/blob/main/catalog/todo-api.yaml
-    backstage.io/managed-by-location: github:https://github.com/odedia/todo-service/blob/main/catalog/todo-api.yaml
+    backstage.io/techdocs-ref: url:https://raw.githubusercontent.com/odedia/todo-service/main/catalog/todos-api-demo.yaml
+    backstage.io/managed-by-location: url:https://raw.githubusercontent.com/odedia/todo-service/main/catalog/todos-api-demo.yaml
 spec:
   type: openapi
   lifecycle: experimental
