--- a/catalog/full.yaml
+++ b/catalog/full.yaml
@@ -1,20 +1,19 @@
-
 apiVersion: backstage.io/v1alpha1
 kind: Component
 metadata:
   name: todo-service
-  description: The main service for managing todos
+  description: The service that handles all todo tasks
   annotations:
-    backstage.io/techdocs-ref: url:https://github.com/odedia/todo-service
-    backstage.io/managed-by-location: github:https://github.com/odedia/todo-service/blob/main/catalog/todo-service.yaml
+    backstage.io/techdocs-ref: dir:.
 spec:
   type: service
   lifecycle: production
   owner: team-tanzu
-  providesApis:
+  system: todo-system
+  providesApi:
     - todo-api
-  system: todos
-  domain: tanzu-domain
+  dependsOn:
+    - postgres-db
 
 ---
 
@@ -22,17 +21,15 @@ apiVersion: backstage.io/v1alpha1
 kind: Component
 metadata:
   name: todo-ui
-  description: The user interface for managing todos
+  description: The user interface for todo tasks
   annotations:
-    backstage.io/techdocs-ref: url:https://github.com/odedia/todo-service
-    backstage.io/managed-by-location: github:https://github.com/odedia/todo-service/blob/main/catalog/todo-ui.yaml
+    backstage.io/techdocs-ref: dir:.
 spec:
   type: website
   lifecycle: production
   owner: team-tanzu
-  system: todos
-  domain: tanzu-domain
-  consumesApis:
+  system: todo-system
+  consumesApi:
     - todo-api
 
 ---
@@ -41,43 +38,24 @@ apiVersion: backstage.io/v1alpha1
 kind: Component
 metadata:
   name: postgres-db
-  description: The PostgreSQL database for the todo service
+  description: The Postgres database for todo tasks
   annotations:
-    backstage.io/techdocs-ref: url:https://github.com/odedia/todo-service
-    backstage.io/managed-by-location: github:https://github.com/odedia/todo-service/blob/main/catalog/postgres-db.yaml
+    backstage.io/techdocs-ref: dir:.
 spec:
   type: database
   lifecycle: production
   owner: team-tanzu
-  system: todos
-  domain: tanzu-domain
-
----
-
-apiVersion: backstage.io/v1alpha1
-kind: API
-metadata:
-  name: todo-api
-  description: Backend API for the Todos application
-  annotations:
-    backstage.io/techdocs-ref: url:https://raw.githubusercontent.com/odedia/todo-service/main/catalog/todos-api-demo.yaml
-    backstage.io/managed-by-location: url:https://raw.githubusercontent.com/odedia/todo-service/main/catalog/todos-api-demo.yaml
-spec:
-  type: openapi
-  lifecycle: experimental
-  owner: team-tanzu
-  system: todos
+  system: todo-system
 
 ---
 
 apiVersion: backstage.io/v1alpha1
 kind: System
 metadata:
-  name: todos
-  description: The system for the todo service
+  name: todo-system
+  description: The todo system
   annotations:
-    backstage.io/techdocs-ref: url:https://github.com/odedia/todo-service
-    backstage.io/managed-by-location: github:https://github.com/odedia/todo-service/blob/main/catalog/todos.yaml
+    backstage.io/techdocs-ref: dir:.
 spec:
   owner: team-tanzu
-  domain: tanzu-domain
+  domain: todo
