--- a/catalog/full.yaml
+++ b/catalog/full.yaml
@@ -1,19 +1,29 @@
 apiVersion: backstage.io/v1alpha1
+kind: Domain
+metadata:
+  name: tanzu-domain
+  description: The Tanzu domain
+spec:
+  owner: team-tanzu
+
+---
+
+apiVersion: backstage.io/v1alpha1
 kind: Component
 metadata:
   name: todo-service
-  description: The service that handles all todo tasks
+  description: The main service for managing todos
   annotations:
-    backstage.io/techdocs-ref: dir:.
+    backstage.io/techdocs-ref: url:https://github.com/odedia/todo-service
+    backstage.io/managed-by-location: github:https://github.com/odedia/todo-service/blob/main/catalog/todo-service.yaml
 spec:
   type: service
   lifecycle: production
   owner: team-tanzu
-  system: todo-system
-  providesApi:
-    - api:default/todo-api
-  dependsOn:
-    - resource:default/postgres-db
+  providesApis:
+    - todo-api
+  system: todos
+  domain: tanzu-domain
 
 ---
 
@@ -21,41 +31,63 @@ apiVersion: backstage.io/v1alpha1
 kind: Component
 metadata:
   name: todo-ui
-  description: The user interface for todo tasks
+  description: The user interface for managing todos
   annotations:
-    backstage.io/techdocs-ref: dir:.
+    backstage.io/techdocs-ref: url:https://github.com/odedia/todo-service
+    backstage.io/managed-by-location: github:https://github.com/odedia/todo-service/blob/main/catalog/todo-ui.yaml
 spec:
   type: website
   lifecycle: production
   owner: team-tanzu
-  system: todo-system
-  consumesApi:
-    - api:default/todo-api
+  system: todos
+  domain: tanzu-domain
+  consumesApis:
+    - todo-api
 
 ---
 
 apiVersion: backstage.io/v1alpha1
-kind: Resource
+kind: Component
 metadata:
   name: postgres-db
-  description: The Postgres database for todo tasks
+  description: The PostgreSQL database for the todo service
   annotations:
-    backstage.io/techdocs-ref: dir:.
+    backstage.io/techdocs-ref: url:https://github.com/odedia/todo-service
+    backstage.io/managed-by-location: github:https://github.com/odedia/todo-service/blob/main/catalog/postgres-db.yaml
 spec:
   type: database
   lifecycle: production
   owner: team-tanzu
-  system: todo-system
+  system: todos
+  domain: tanzu-domain
+
+---
+
+apiVersion: backstage.io/v1alpha1
+kind: API
+metadata:
+  name: todo-api
+  description: Backend API for the Todos application
+  annotations:
+    backstage.io/techdocs-ref: url:https://github.com/odedia/todo-service/blob/main/catalog/todo-api.yaml
+    backstage.io/managed-by-location: github:https://github.com/odedia/todo-service/blob/main/catalog/todo-api.yaml
+spec:
+  type: openapi
+  lifecycle: experimental
+  owner: team-tanzu
+  system: todos
+  definition: <openAPI-specification>
 
 ---
 
 apiVersion: backstage.io/v1alpha1
 kind: System
 metadata:
-  name: todo-system
-  description: The todo system
+  name: todos
+  description: The system for the todo service
   annotations:
-    backstage.io/techdocs-ref: dir:.
+    backstage.io/techdocs-ref: url:https://github.com/odedia/todo-service
+    backstage.io/managed-by-location: github:https://github.com/odedia/todo-service/blob/main/catalog/todos.yaml
 spec:
   owner: team-tanzu
-  domain: todo
+  domain: tanzu-domain
