--- a/catalog/full.yaml
+++ b/catalog/full.yaml
@@ -67,7 +67,8 @@ spec:
   lifecycle: experimental
   owner: team-tanzu
   system: todos
-  definition: url:https://raw.githubusercontent.com/odedia/todo-service/main/catalog/todo-api-demo.yaml
+  definition: 
+    openapi: '3.0.2'
 
 ---
 
