--- a/catalog/full.yaml
+++ b/catalog/full.yaml
@@ -49,7 +49,7 @@ spec:
   lifecycle: production
   owner: team-tanzu
   system: todos
-
+  domain: tanzu-domain
 ---
 
 apiVersion: backstage.io/v1alpha1
