--- a/pom.xml
+++ b/pom.xml
@@ -58,8 +58,8 @@
 		<dependency>
 			<groupId>org.postgresql</groupId>
 			<artifactId>postgresql</artifactId>
-<!--   			<version>42.5.0</version>
-			<scope>runtime</scope> -->
+   			<version>42.5.0</version>
+			<scope>runtime</scope> 
 		</dependency>
 		<dependency>
 			<groupId>org.projectlombok</groupId>
