--- a/pom.xml
+++ b/pom.xml
@@ -60,8 +60,8 @@
 			<artifactId>postgresql</artifactId>
    			<version>42.5.0</version>
 			<scope>runtime</scope> 
-		</dependency>
-		<dependency> -->
+		</dependency>-->
+		<dependency> 
 			<groupId>org.projectlombok</groupId>
 			<artifactId>lombok</artifactId>
 			<optional>true</optional>
