--- a/pom.xml
+++ b/pom.xml
@@ -55,12 +55,12 @@
  <version>2.7.1</version>
 			<scope>runtime</scope>
 		</dependency>
-<!--                 <dependency>
+                <dependency>
 			<groupId>org.postgresql</groupId>
 			<artifactId>postgresql</artifactId>
    			<version>42.5.0</version>
 			<scope>runtime</scope> 
-		</dependency>-->
+		</dependency>
 		<dependency> 
 			<groupId>org.projectlombok</groupId>
 			<artifactId>lombok</artifactId>
