support for Tanzu Platform

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,5 +2,7 @@
     "git.ignoreLimitWarning": true,
     "java.configuration.updateBuildConfiguration": "automatic",
     "java.server.launchMode": "Standard",
-    "java.compile.nullAnalysis.mode": "automatic"
+    "java.compile.nullAnalysis.mode": "automatic",
+    "tanzu.trackedNamespaces": "demos",
+    "tanzu.confirmDelete": false
 }
