--- a/.tanzu/config/backend-route.yaml
+++ b/.tanzu/config/backend-route.yaml
@@ -1,4 +1,4 @@
-apiVersion: tanzu.vmware.com/v1
+apiVersion: "tanzu.vmware.com/v1"
 kind: SpringCloudGatewayRouteConfig
 metadata:
   name: todo-service-route-config
