--- a/scg/httpproxy.yaml
+++ b/scg/httpproxy.yaml
@@ -6,9 +6,7 @@ metadata:
   name: todos-proxy
 spec:
   virtualhost:
-    fqdn: #@ "todos.apps.{}".format(data.values.ingress.domain)
-    tls: 
-      secretName: #@ "tanzu-system-ingress/cnr-{}".format(data.values.ingress.contour_tls_secret)
+    fqdn: todos.apps.tap16.tanzutime.com
   routes:
   - services:
     - name: todos-gateway
